--- a/css/styles.css
+++ b/css/styles.css
@@ -11,64 +11,34 @@ html{
 }
 body{
     overflow: hidden;
-}
-#header{
-    width: 100%;
-    position: fixed;
-    top: 0%; left:0%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2rem ,4rem;
-    z-index: 1000;
-}
-nav{
-        display: flex;
-        align-items: center;
-        justify-content:space-around;
-        list-style: none;
-        margin-right: 4rem;
-    }
-    a{
-       font-size: 12pt; 
-       color: rgb(36, 34, 37);
-    }
-    :hover{
-        color: rgb(46, 43, 45);
-        text-decoration:none ;
-    }
-    h1{
-        text-align: center;
-    }
-.HEADING{
-    font-family: 'Sofia';
-    font-size: 12pt;
- }
-.accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-  }
-  
-  .active, .accordion:hover {
-    background-color: #ccc;
-  }
-  
-  .panel {
-    padding: 0 18px;
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-  }
+    background-repeat: repeat-x;
 
-        
+}
+
+.HEADING{
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    font-size: 12pt;
+    text-align: center;
+    color: rgb(222, 203, 231);
+ }
+.menuHidden {
+	display:none;
+}
+
+.menu {
+	margin-left:20px;
+    color: rgb(253, 249, 251);
+    font-size: 16pt;
+    background-image: linear-gradient(rgb(70, 0, 128),rgb(245, 192, 255));
+    padding: 20px;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 1px solid rgb(250, 239, 245);
+    font-size: 20pt;
+  }
+       
    
             
