--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,14 @@ table {
     border: 1px solid rgb(250, 239, 245);
     font-size: 20pt;
   }
+.Container{
+    margin: 0; padding:0 ;
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-transform: capitalize;
+    transition: all .2s linear;
+}
+
        
    
             
