--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,6 @@ body{
 	margin-left:20px;
     color: rgb(253, 249, 251);
     font-size: 16pt;
-    background-image: linear-gradient(rgb(70, 0, 128),rgb(245, 192, 255));
     padding: 20px;
 }
 table {
@@ -47,6 +46,45 @@ table {
     transition: all .2s linear;
 }
 
-       
-   
-            
+.clickMe {
+    -moz-appearance: button;
+    -ms-appearance: button;
+    -o-appearance: button;
+    -webkit-appearance: button;
+    appearance: button;
+    text-decoration: none;
+    color: #000;
+    padding: 0.2em 0.4em;
+}​
+.button {
+    padding: 15px 25px;
+    font-size: 24px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    color: #fff;
+    background-color: #ea08f1;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px rgb(241, 3, 210);
+  }
+  
+  a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+    
+  }
+  
+  a:hover {
+    background-color: rgb(221, 221, 221);
+    color: rgb(0, 0, 0);
+  }
+  
+  .build {
+    background-color: #f80af8;
+    transform: translateY(4px);;
+    border-radius: 20px;
+  }
+  
+  
