--- a/css/styles.css
+++ b/css/styles.css
@@ -10,16 +10,15 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    overflow: hidden;
-    background-repeat: repeat-x;
-
+    background-image: url(/img/wood.jpeg);
+    background-size: cover;
 }
 
 .HEADING{
-    font-family: Georgia, Times, 'Times New Roman', serif;
+    font-family:cursive;
     font-size: 12pt;
     text-align: center;
-    color: rgb(222, 203, 231);
+    color: rgb(18, 18, 19);
  }
 .menuHidden {
 	display:none;
@@ -27,7 +26,7 @@ body{
 
 .menu {
 	margin-left:20px;
-    color: rgb(253, 249, 251);
+    color: rgb(17, 16, 17);
     font-size: 16pt;
     padding: 20px;
 }
@@ -82,9 +81,91 @@ table {
   }
   
   .build {
-    background-color: #f80af8;
+    background-color: #f7a4f7;
     transform: translateY(4px);;
     border-radius: 20px;
   }
   
+#menu{
+    border-radius: 25px;
+    background-image: linear-gradient(pink violet);
+    padding: 20px;
+    width: 20%;
+    height: 150%;
+    float: left;
+    clear: right;
+    border: ridge;
+}
+.ptag {
+    padding: 2%;
+    color: white;
+    background-color: rgba(185, 121, 245, 0.301);
+    padding: 50px 10px;
+    font-weight: 100%;
+    padding-top: 30px;
+    border: 4px solid rgb(232, 182, 245);
+    font-size: 1.1em;
+    line-height: 90%;
+    margin: 20% 5%;
+    overflow: hidden;
+    letter-spacing: 2px;
+    font-family: 'Merienda', cursive;
+  }
+  .card {
+    margin: 10px 0;
+    position: relative;
+    overflow: hidden;
+  }
+  .card:hover img {
+    transform: scale(1.2);
+    transition: all 0.3s ease;
+  }
+  #special{
+    border-radius: 25px;
+    padding: 20px;
+    width: 20%;
+    height: 150%;
+    float: right;
+    border: ridge;
+  }
+  h4{
+    text-align: center;
+    font-style: italic;
+  }
+
+  #About{
+    font-family: cursive;
+    color: rgb(24, 22, 23);
+    text-align: center;
+    border:ridge;
+    padding: 20px;
+    width: 100%;
+  }
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
   
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+  
+  
+
+  .image {
+    display: block;
+    width: 70%;
+    height: auto;
+  }
+ 
+.container{
+  text-align: center;
+}
+.hide {
+  display: none;
+}
