--- a/css/styles.css
+++ b/css/styles.css
@@ -136,10 +136,11 @@ table {
   #About{
     font-family: cursive;
     color: rgb(24, 22, 23);
-    text-align: center;
+    text-align: left;
     border:ridge;
     padding: 20px;
     width: 100%;
+    height:100%
   }
   .column {
     float: left;
@@ -150,7 +151,7 @@ table {
   
   @media screen and (max-width: 650px) {
     .column {
-      width: 100%;
+      width: 40%;
       display: block;
     }
   }
@@ -159,13 +160,133 @@ table {
 
   .image {
     display: block;
-    width: 70%;
-    height: auto;
+    width: 30%;
+    height: 30%;
   }
+  * {box-sizing:border-box}
+
  
-.container{
-  text-align: center;
+  .slideshow-container {
+    max-width: 40%;
+    position: relative;
+    margin: auto;
+    border: 30px;
+  }
+  
+ 
+  .mySlides {
+    display: none;
+  }
+  
+ 
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+ 
+  .prev:hover, .next:hover {
+    background-color: rgba(243, 132, 201, 0.8);
+  }
+  
+  
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+  
+ 
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  
+  .dot {
+    cursor: pointer;
+    height: 40px;
+    width: 40px;
+    margin: 0 4px;
+    background-color: rgb(190, 3, 247);
+    border-radius: 60%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #ee1bee;
+  }
+  
+
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  /* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 }
-.hide {
-  display: none;
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #f0b6ed;
+  color: rgb(15, 14, 14);
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #a04591;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+  @-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  } 
