--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background-image: url(/img/wood.jpeg);
+    background-image: url(/img/background.jpg);
     background-size: cover;
 }
 
@@ -90,7 +90,7 @@ table {
     border-radius: 25px;
     background-image: linear-gradient(pink violet);
     padding: 20px;
-    width: 20%;
+    width: 50%;
     height: 150%;
     float: left;
     clear: right;
@@ -123,7 +123,7 @@ table {
   #special{
     border-radius: 25px;
     padding: 20px;
-    width: 20%;
+    width: 50%;
     height: 150%;
     float: right;
     border: ridge;
@@ -248,19 +248,17 @@ table {
     animation-name: fade;
     animation-duration: 1.5s;
   }
-  /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */ 
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  width: 100%; 
+  padding: 12px;  
+  border: 1px solid #ccc; 
+  border-radius: 4px;
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px; 
+  resize: vertical 
 }
 
-/* Style the submit button with a specific background color etc */
 input[type=submit] {
   background-color: #f0b6ed;
   color: rgb(15, 14, 14);
@@ -270,12 +268,10 @@ input[type=submit] {
   cursor: pointer;
 }
 
-/* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
   background-color: #a04591;
 }
 
-/* Add a background color and some padding around the form */
 .container {
   border-radius: 5px;
   background-color: #f2f2f2;
@@ -290,3 +286,102 @@ input[type=submit]:hover {
     from {opacity: .4}
     to {opacity: 1}
   } 
+  .topnav {
+  background-color: rgb(255, 14, 223);
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 30px 45px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #af4caf;
+  color: white;
+}
+img {
+  vertical-align: middle;
+}
+
+.container {
+  position: relative;
+}
+
+.mySlides {
+  display: none;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(231, 14, 202, 0.8);
+}
+
+.numbertext {
+  color: #181414;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.caption-container {
+  text-align: center;
+  background-color: rgb(240, 41, 197);
+  padding: 2px 16px;
+  color: white;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.column {
+  float: left;
+  width: 16.66%;
+}
+
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
