--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,7 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background-image: url(/img/background.jpg);
-    background-size: cover;
+   
 }
 
 .HEADING{
@@ -21,7 +20,7 @@ body{
     color: rgb(18, 18, 19);
  }
 .menuHidden {
-	display:none;
+
 }
 
 .menu {
@@ -87,14 +86,17 @@ table {
   }
   
 #menu{
-    border-radius: 25px;
-    background-image: linear-gradient(pink violet);
-    padding: 20px;
-    width: 50%;
-    height: 150%;
-    float: left;
-    clear: right;
-    border: ridge;
+  width:40%;
+  max-height: 90%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border:groove;
+  border-radius: 20px;
+  float: left;
+  text-align: left;
+  text-decoration-style: wavy;
+  background-image: url(/img/Purple-Aesthetic-Wallpaper-14.jpg);
+  color: #ddd;
 }
 .ptag {
     padding: 2%;
@@ -105,43 +107,44 @@ table {
     padding-top: 30px;
     border: 4px solid rgb(232, 182, 245);
     font-size: 1.1em;
-    line-height: 90%;
-    margin: 20% 5%;
+    line-height: 10%;
+    margin: 10% 5%;
     overflow: hidden;
     letter-spacing: 2px;
     font-family: 'Merienda', cursive;
   }
   .card {
     margin: 10px 0;
-    position: relative;
+    position: center;
     overflow: hidden;
+    height: 80%;
+    width: 90%;
+    background-color: transparent
+    
+  
   }
   .card:hover img {
     transform: scale(1.2);
     transition: all 0.3s ease;
   }
   #special{
-    border-radius: 25px;
-    padding: 20px;
-    width: 50%;
-    height: 150%;
-    float: right;
-    border: ridge;
+  width:40%;
+  height:30%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border:groove;
+  border-radius: 20px;
+  float: left;
+  text-align: center;
+  text-decoration-style: wavy;
+  background-image: url(/img/Purple-Aesthetic-Wallpaper-14.jpg);
+  color: #ddd;
   }
   h4{
     text-align: center;
     font-style: italic;
   }
 
-  #About{
-    font-family: cursive;
-    color: rgb(24, 22, 23);
-    text-align: left;
-    border:ridge;
-    padding: 20px;
-    width: 100%;
-    height:100%
-  }
   .column {
     float: left;
     width: 33.3%;
@@ -252,7 +255,7 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-  background-color: #f0b6ed;
+  background-color: #f7e7f6;
   color: rgb(15, 14, 14);
   padding: 12px 20px;
   border: none;
@@ -261,12 +264,12 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #a04591;
+  background-color: #e7dde6;
 }
 
 .container {
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color:transparent;
   padding: 20px;
 }
   @-webkit-keyframes fade {
@@ -303,6 +306,7 @@ input[type=submit]:hover {
 }
 img {
   vertical-align: middle;
+  size: 20%;
 }
 
 .container {
@@ -340,7 +344,7 @@ img {
 
 .prev:hover,
 .next:hover {
-  background-color: rgba(231, 14, 202, 0.8);
+  background-color: rgba(224, 214, 223, 0.8);
 }
 
 .numbertext {
@@ -353,9 +357,8 @@ img {
 
 .caption-container {
   text-align: center;
-  background-color: rgb(240, 41, 197);
   padding: 2px 16px;
-  color: white;
+  color: rgb(19, 17, 17);
 }
 
 .row:after {
@@ -383,7 +386,8 @@ img {
   width:40%;
   padding: 15px;
   margin: 5px 0 22px 0;
-  background-color:  #e605fa;
+  background-image: url(/img/Purple-Aesthetic-Wallpaper-14.jpg);
+  border-radius: 10px;
 }
 input[type=text], input[type=password] {
   width:50%;
@@ -391,7 +395,8 @@ input[type=text], input[type=password] {
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
-  background: #f703f7;
+  background: rgb(214, 157, 231);
+  border-radius: 20px;
 }
 
 input[type=text]:focus, input[type=password]:focus {
@@ -400,7 +405,7 @@ input[type=text]:focus, input[type=password]:focus {
 }
 
 hr {
-  border: 1px solid #f1f1f1;
+  border: 6px solid #f1f1f1;
   margin-bottom: 25px;
 }
 
@@ -414,6 +419,7 @@ button {
   cursor: pointer;
   width: 50%;
   opacity: 0.9;
+  border-radius: 20px;
 }
 button:hover {
   opacity:1;
@@ -492,4 +498,50 @@ footer{
     display: block;
   }
 }
-
+#slide{
+  width:40%;
+  max-height: 40%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border:groove;
+  border-radius: 20px;
+}
+#About{
+  width:50%;
+  max-height: 40%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border:groove;
+  border-radius: 20px;
+  float: left;
+  text-align: center;
+  text-decoration-style: wavy;
+  background-image: url(/img/Purple-Aesthetic-Wallpaper-14.jpg);
+  color: #ddd;
+}
+#contact{
+  width:50%;
+  max-height: 40%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border:groove;
+  border-radius: 20px;
+  float: left;
+  text-align: center;
+  text-decoration-style: wavy;
+  background-image: url(/img/Purple-Aesthetic-Wallpaper-14.jpg);
+  color: #ddd;
+}
+#delivery{
+  width:50%;
+  max-height: 40%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border:groove;
+  border-radius: 20px;
+  float: left;
+  text-align: center;
+  text-decoration-style: wavy;
+  background-image: url(/img/Purple-Aesthetic-Wallpaper-14.jpg);
+  color: #ddd;
+}
