--- a/css/styles.css
+++ b/css/styles.css
@@ -304,6 +304,50 @@ input[type=submit]:hover {
   background-color: #af4caf;
   color: white;
 }
+
+.topnav .login-container {
+  float: right;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+  width: 150px; 
+}
+
+.topnav .login-container button {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .login-container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .login-container {
+    float: none;
+  }
+  .topnav a, .topnav input[type=text], .topnav .login-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+  }
+}
 img {
   vertical-align: middle;
   size: 20%;
@@ -544,4 +588,17 @@ footer{
   text-decoration-style: wavy;
   background-image: url(/img/Purple-Aesthetic-Wallpaper-14.jpg);
   color: #ddd;
+}
+#slide{
+  background-image: url(/img/background.jpg);
+}
+#new{
+  width:60%;
+  max-height: 40%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border:groove;
+  border-radius: 20px;
+  float: right;
+  background-image: url(/img/background.jpg);
 }
